Advance zero-copy rendering and pacing